# eyrc23_CL_1455

./: README.md  config  newTestFile.py  requirements.sh  ultra.ino  zsderftgyh
All_Maps/Finals/: map.data  map.pgm  map.yaml
All_Maps/Simulation/: map.pgm
ebot_docking/: CMakeLists.txt  config.yaml
ebot_docking/scripts/: duplicate.py  (+12 more)
ebot_nav2/: CMakeLists.txt
isro_robotic_arm_new/: CMakeLists.txt  package.xml
mani_stack/: CMakeLists.txt  config.yaml  package.xml  setup.py
mani_stack/Nav2Param/: nav2_og.yaml  nav2_params.yaml
mani_stack/assets/: TestTube.stl  cylinder.stl
mani_stack/launch/: SpwanMoveit.launch.py  SpwanNav2.launch.py  SpwanNav2Hardware.launch.py  ebot_nav2_brinup.launch.py  sensor_filter.launch.py  sensor_filter.py  spawn_new_arm.launch.py  spwan_both.launch.py  task3b.launch.py  task4c.launch.py
mani_stack/scripts/: differentarucotest.py  ebot_nav2_yaml.py  exitNav2.py  getWallpaper.py  joinStateManipulation.py  manipulation-servo.py  manipulation.py  manipulationTest.py  manipulation_nav2.py  nodeTime.py  perception.py  returnAvailabe.py  servoHardware.py  servoManipulation.py  servoManipulationQueue.py  servoManipulationWithClass.py  servoManipulation_nav2.py  servo_testing.py  simpleManipulation.py  task1a.py  task1ab-manipulation-servo.py  task1ab-manipulation.py  task1ab-perception.py  task1b.py  task1c.py  task2c_testing.py
mani_stack/scripts/EbotManipulation/: EbotTask4A.py  EbotTask5A.py  EbotTask5A_1.py  EbotTask5A_2.py  docking_Hardware_boilerplate.py  docking_reset.py  ebot_yaml.py  imu_odom_reset.py  nav2_cmd.py  ultraSonicFilter.py
mani_stack/scripts/armManipulation/: manipulation.py  manipulationTest.py  perception.py  servoManipulation.py  servoManipulationWithClass.py  simpleManipulation.py  switchController.py
mani_stack/scripts/extra/: docking_reset.py  monitor.py
mani_stack/scripts/task4A/: EbotTask4A.py  measureUltra.py
mani_stack/scripts/task5A/: duplicateImu.py  ebot_yaml.py  ultraFilter.py
mani_stack/srv/: DockSw.srv  startManipulation.srv
pkgconfig/: roboticsgroup_gazebo_plugins.pc  roboticsgroup_upatras_gazebo_plugins.pc  robotiq_description.pc  robotiq_gazebo.pc
raatt/: CMakeLists.txt  package.xml
robotic_arm/: CMakeLists.txt  package.xml
robotic_arm_moveit_config/: .setup_assistant  package.xml
src/: README.md
ur5_moveit/: .setup_assistant  CMakeLists.txt  package.xml
usb_relay/: CMakeLists.txt  package.xml
(+158 files in other folders)
