cmake_minimum_required(VERSION 3.8)
project(mani_stack)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(rclpy REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)



if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(
  DIRECTORY
    scripts
    assets
    launch
  DESTINATION
    share/${PROJECT_NAME}/
)

install(
  DIRECTORY
    assets
  DESTINATION
    lib/${PROJECT_NAME}
)
install(
  PROGRAMS
  DESTINATION lib/${PROJECT_NAME}
)
file(GLOB MY_PROGRAMS "scripts/*")
install(
  PROGRAMS ${MY_PROGRAMS}
  DESTINATION lib/${PROJECT_NAME}/scripts
)
install(
  PROGRAMS
  DESTINATION lib/${PROJECT_NAME}
)
file(GLOB MY_PROGRAMS "launch/*")

install(
  PROGRAMS ${MY_PROGRAMS}
  DESTINATION lib/${PROJECT_NAME}/launch
)

#script installed





ament_package()
